change method of check-reset-code + change to eslint formatter
